Rework feature data, add ItemData and ListData, rename data/vault provider APIs, and add vault content and block break hooks